--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "My template",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "gulp": "gulp"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "m",
   "license": "ISC",
